[package]
name = "seer_agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-stream = "0.1"
reqwest = { version = "0.11.17", features = ["blocking", "rustls-tls", "json"] }
futures = "0.3"
winreg = "0.5"
libc = "0.2.150"

